[package]
name = "machine_metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.28.2"
cncr_k_ltd_ring = { git = "https://github.com/Banyc/cncr_k_ltd_ring" }
tokio = { version = "1.26.0", features = ["full"] }
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }

[workspace]
members = ["server"]
