[package]
name = "machine_metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.28.4"
cncr_k_ring = "0.1.0"
tokio = { version = "1.27.0", features = ["rt", "time"] }
log = "0.4.17"
serde = { version = "1.0.159", features = ["derive"] }

[workspace]
members = ["server"]
