[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
env_logger = "0.10.0"
toml = "0.7.3"
tower-http = { version = "0.4.0", features = ["full"] }
machine_metrics = { path = ".." }
tokio = { version = "1.27.0", features = ["full"] }
serde = { version = "1.0.159", features = ["derive"] }
log = "0.4.17"
